Fixed max width property in timer module UI for large screen

--- a/index.html
+++ b/index.html
@@ -191,70 +191,70 @@
 
             <section>
                 <h2 class="tos_intro_heading">Time On Site Metrics. Real-time!</h2>
+                <div class="max-width: 550px;">
+                    <div class="timer_module" title="">
+                        <div>
+                            <div class="timer_container timer_container_odd" title="tooltip-info">
+                                <span class="timer_container_heading">
+                                    Time On Page (in seconds)
+                                </span>
+                                <div class="timer_container_info_header" >
+                                    <div id="timeOnPageRaw" class="timer_container_info pattern_out"></div>
+                                </div>
+                            </div>
 
-                <div class="timer_module" title="">
-                    <div>
-                        <div class="timer_container timer_container_odd" title="tooltip-info">
-                            <span class="timer_container_heading">
-                                Time On Page (in seconds)
-                            </span>
-                            <div class="timer_container_info_header" >
-                                <div id="timeOnPageRaw" class="timer_container_info pattern_out"></div>
+                            <div class="timer_container" title="tooltip-info">
+                                <span class="timer_container_heading">
+                                    Time On Page (Duration)
+                                </span>
+                                <div class="timer_container_info_header">
+                                    <div id="timeOnPageDuration" class="timer_container_info pattern_in"></div>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="timer_container" title="tooltip-info">
-                            <span class="timer_container_heading">
-                                Time On Page (Duration)
-                            </span>
-                            <div class="timer_container_info_header">
-                                <div id="timeOnPageDuration" class="timer_container_info pattern_in"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="timer_container_set2">
-                        <div class="timer_container timer_container_odd" title="tooltip-info">
-                            <span class="timer_container_heading">
-                                Time On Site (in seconds)
-                            </span>
-                            <div class="timer_container_info_header">
-                                <div id="timeOnSiteRaw" class="timer_container_info pattern_out"></div>
-                            </div>
-                        </div>
-
-                        <div class="timer_container" title="tooltip-info">
-                            <span class="timer_container_heading">
-                                Time On Site (Duration)
-                            </span>
-                            <div class="timer_container_info_header">
-                                <div id="timeOnSiteDuration" class="timer_container_info pattern_in"></div>
+                        <div class="timer_container_set2">
+                            <div class="timer_container timer_container_odd" title="tooltip-info">
+                                <span class="timer_container_heading">
+                                    Time On Site (in seconds)
+                                </span>
+                                <div class="timer_container_info_header">
+                                    <div id="timeOnSiteRaw" class="timer_container_info pattern_out"></div>
+                                </div>
                             </div>
 
-                            <div class="info-arrow"></div>
-                            <div class="timer-info-box">
-                                You spent so far...
-                            </div>
-                        </div>
-                    </div>
+                            <div class="timer_container" title="tooltip-info">
+                                <span class="timer_container_heading">
+                                    Time On Site (Duration)
+                                </span>
+                                <div class="timer_container_info_header">
+                                    <div id="timeOnSiteDuration" class="timer_container_info pattern_in"></div>
+                                </div>
 
-                    <div class="timer_container_set3">
-                        <div id="timerByMillisecondsHandler" style="cursor:pointer;color: #069;
-                        font-size: 20px;">Want detailed precision (in milliseconds)?</div>
-                        <div id="timeOnPageMillisecondParent" class="timer_container_milli timer_container_odd" style="display:none;">
-                            <span class="timer_container_heading">
-                                Time On Page (in milliseconds)
-                            </span>
-                            <div class="timer_container_info_header" >
-                                <div id="timeOnPageMillisecond" class="timer_container_info pattern_out"></div>
+                                <div class="info-arrow"></div>
+                                <div class="timer-info-box">
+                                    You spent so far...
+                                </div>
                             </div>
                         </div>
 
-                        <div class="timer_container" style="display:none;">
+                        <div class="timer_container_set3">
+                            <div id="timerByMillisecondsHandler" style="cursor:pointer;color: #069;
+                            font-size: 20px;">Want detailed precision (in milliseconds)?</div>
+                            <div id="timeOnPageMillisecondParent" class="timer_container_milli timer_container_odd" style="display:none;">
+                                <span class="timer_container_heading">
+                                    Time On Page (in milliseconds)
+                                </span>
+                                <div class="timer_container_info_header" >
+                                    <div id="timeOnPageMillisecond" class="timer_container_info pattern_out"></div>
+                                </div>
+                            </div>
+
+                            <div class="timer_container" style="display:none;">
+                            </div>
                         </div>
                     </div>
                 </div>
-
                 <div style="font-size: 12px;color: #1d0eff;margin-top: 15px;">
                     <span style="padding-left:20px;">Time on page</span> is the time spent so far in this page whearas Time on site is the time spent in the session overall. If you reload the page 3 times, then Time on site = (Time on page of first page visit + Time on page of second page visit + Time on page of third page visit)
                 </div>
