Fixed max width property in timer module UI for large screen-1

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
             <section>
                 <h2 class="tos_intro_heading">Time On Site Metrics. Real-time!</h2>
-                <div class="max-width: 550px;">
+                <div style="display: inline-block;">
                     <div class="timer_module" title="">
                         <div>
                             <div class="timer_container timer_container_odd" title="tooltip-info">
