Added updated version of timeonsitetracker.js(1.0.1) inital version 3

--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
         </div>
         <script src="assets/js/scale.fix.js"></script>
         <script>
-        alert('PLATFORM : ' + navigator.platform + ', USER_AGENT : ' + navigator.userAgent + ', TOUCHPOINTS : ' + navigator.maxTouchPoints);
+        //IPOD testing...
+        // alert('PLATFORM : ' + navigator.platform + ', USER_AGENT : ' + navigator.userAgent + ', TOUCHPOINTS : ' + navigator.maxTouchPoints);
         </script>
     </body>
 </html>
