dded updated version of timeonsitetracker.js(1.0.1) inital version 4

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             if(isIOSDeviceInst) {
                 config = {
                     trackBy: 'seconds',
-                    developerMode: true,
+                    // developerMode: true,
 
                     /*Caution! this setting only for demo purpose and for TimeOnSite tracker Admin */
                     isIOSDemo: true,
