--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         <li>Readily available reporting & analytics application in PHP/NodeJs</li>
                     </ul>
 
-                    <h4 style="color: #ff6363;border-style: inset;padding: 3px;border-radius: 6px;">Important! Since the mid of 2021, sendBeacon() API is standard in most browsers; make use of it and achieve high accuracy; capture session-duration even for bounce-rated pages, a feature you regret missing in all other web analytic providers! <span style="font-size: 10px;color: #000;">(see "getting started" page for sendBeacon() real-time example)</span></h4>
+                    <h4 style="color: #747474;border-style: inset;padding: 3px;border-radius: 6px;">Important! Since the mid of 2021, sendBeacon() API is standard in most browsers; make use of it and achieve high accuracy; capture session-duration even for bounce-rated pages, a feature you regret missing in all other web analytic providers! <span style="font-size: 10px;color: #000;">(see "getting started" page for sendBeacon() real-time example)</span></h4>
 
                 </div>
 
@@ -414,7 +414,20 @@
                     <p>
                         TimeOnSiteTracker.js is <strong>strictly commercial software</strong>. Using it in live/production servers and environments (ex. <strong>http://example.com</strong>) require that you purchase licence key. It's illegal to use without a valid licence key. The tracker snippet itself has to contain licence key to ensure that it's valid.
                         <ul>
-                            <li>The <strong>cost of licence is $38 (USD)</strong> per year as of <script>document.write((new Date()).getFullYear())</script>.</li>
+                            <li>(<strong>Standard</strong>) 
+                                The <strong>cost of licence is $38 (USD)</strong> per year as of <script>document.write((new Date()).getFullYear())</script> 
+                            (For individuals & mid-sized applications)
+                                <!-- <br/> OR </br> -->
+                                <!-- <ul>
+                                    <li>For large and enterprise applications, there is <strong>one-time lifetime licence cost $375 (USD)</strong> 
+                                        [<strong>Recommended</strong>]</li>
+                                </ul> -->
+                            </li><span style="color:#cb1100;margin-left:10%;">(OR)</span></br>
+                            <li>(<strong>Premier</strong>)
+                                For large and enterprise applications, there is <strong>one-time lifetime licence cost $375 (USD)</strong> 
+                                [<strong>Recommended</strong>, includes detailed email support and recommendations]
+                            </li>
+                            </br>
                             <li>The licence is <strong>website domain-specific</strong>. It's not specific to no. of users/products like other commercial software. Any no. of users/applications under a single domain (ex. <strong>http://example.com</strong>) can use the purchased software.</li>
                             
                             <li>Follow the instructions below for your site/app registration and buying licence. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use. Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your website as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
@@ -430,10 +443,18 @@
                             <span>Buying licence is a two-step process as given here</span>
                             <ul>
                                 <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSd3yxZBSlnvOv1LKf5PgQd9hbWDdAtW4dWItUzE7CKoWsMJLQ/viewform">Register your application(website)</a></li>
-                                <li><a target="_blank" href="https://www.paypal.me/saleemkce/38usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)</li>
+                                <li>
+                                    <strong>(Standard)</strong> 
+                                    <a target="_blank" href="https://www.paypal.me/saleemkce/38usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)<br/>
+
+                                    [or]<br/>
+
+                                    <strong>(Premier)</strong> 
+                                    <a target="_blank" href="https://www.paypal.me/saleemkce/375usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)
+                                </li>
                             </ul>
 
-                            <div>Registering your application and paying can be done in any order. When you press pay button and your payment is successful, your payment time (at Paypal) is recorded and you can continue to use the software for next 1 year.<br/><br/></div>
+                            <div>Registering your application and paying can be done in any order. When you press pay button and your payment is successful, your payment time (at Paypal) is recorded and you can continue to use the software for next 1 year in case of type "Standard".<br/><br/></div>
 
                             <div>We would generate a licence key and send to your email available via step 1. It may take upto 3 days for us to send your licence key. But you could start using the software from the moment you made the purchase. <a target="_blank" href="https://github.com/saleemkce/timeonsite">Download the software</a> <strong>timeonsitetracker.js</strong> or minified version and use it in your application. When we send your licence key via email, copy it and you have to manually overwrite the <strong>Licence Key: {your-license-key-here}</strong> line in software as given in image above.<br/><br/></div>
 
