Updated version of timeonsitetracker.js(1.2.1) in docs site

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <a href="docs/index.html">Getting Started</a><br/>
                     <a href="backend/index.html">Reporting Dashboard in PHP/NodeJs</a><br/>
                     <a href="#licensedAndFreeVersions">Buy Licence/Use it free</a><br/>
-                    <a href="docs/releases.html">Release Notes (latest: "v1.2.0")</a><br/>
+                    <a href="docs/releases.html">Release Notes (latest: "v1.2.1")</a><br/>
 
                     <br/><br/>
                     <a href="https://medium.com/@saleemkce">Medium(.com) blogs</a><br/>
@@ -422,7 +422,7 @@
                                     <li>For large and enterprise applications, there is <strong>one-time lifetime licence cost $375 (USD)</strong> 
                                         [<strong>Recommended</strong>]</li>
                                 </ul> -->
-                            </li><span style="color:#cb1100;margin-left:10%;">(OR)</span></br>
+                            </li><span style="color:#a7a7a7;font-size:large;margin-left:10%;">(OR)</span></br>
                             <li>(<strong>Premier</strong>)
                                 For large and enterprise applications, there is <strong>one-time lifetime licence cost $375 (USD)</strong> 
                                 [<strong>Recommended</strong>, includes detailed email support and recommendations]
@@ -430,7 +430,7 @@
                             </br>
                             <li>The licence is <strong>website domain-specific</strong>. It's not specific to no. of users/products like other commercial software. Any no. of users/applications under a single domain (ex. <strong>http://example.com</strong>) can use the purchased software.</li>
                             
-                            <li>Follow the instructions below for your site/app registration and buying licence. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use. Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your website as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
+                            <li>Follow the instructions below for your site/app registration and buying licence. This license is valid for 1 year from the date of purchase. Once a year completes, you need to pay successive year for continued use(Yearly repayments are applicable for type <strong>Standard</strong> only). Licence key will be sent to your registered email id and is tagged with your domain name. This means you will have single license key mapped with your website as long as you wish to use. If you don't wish to use the software, you could stop paying for it.</li>
 
                             <li>
                                 Valid licence key looks like the following, for example,<br/>
@@ -447,7 +447,7 @@
                                     <strong>(Standard)</strong> 
                                     <a target="_blank" href="https://www.paypal.me/saleemkce/38usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)<br/>
 
-                                    [or]<br/>
+                                    <span style="color:#a7a7a7;font-size:large;margin-left:10%;">(OR)</span><br/>
 
                                     <strong>(Premier)</strong> 
                                     <a target="_blank" href="https://www.paypal.me/saleemkce/375usd">Pay with Paypal</a> (mention your company/entity name in remarks/message box at the time of payment)
