Added Tableau viz and tips for using Tableau public for tracker

--- a/index.html
+++ b/index.html
@@ -397,6 +397,39 @@
                         <h2>Analytics Dashboard</h2>
                         <img id="tosReportingImg1" src='assets/img/tos_analytics.png' style="width: 100%;cursor: pointer;" alt='Time on site analytics'/>
                     </p>
+
+                    <p>
+                        <h2>Business Intelligence for User Engagment</h2>
+                        <div>You are not limited to custom Visual app or raw SQL, you can view reports using any of the following tools:
+                        <ul>
+                            <li>Power BI</li>
+                            <li>QlikView</li>
+                            <li>Tableau etc.</li>
+                        </ul>
+                        or any BI tool. You name it. Here is a sample Tableau public visualization created with <strong>timeonsite.js</strong> You can download it, import the worksheets with Tableau Public/Desktop application and replace the usual <strong>`tos`</strong> table with your production table and view fantastic visualizations. This is the table strcutre and only table used in following Tableau visualizations...<br/>
+                        <img id="tosTableStructure" src='assets/img/tos_table_structure.png' style="width: 100%;cursor: pointer;" alt='tos table structure'/>
+                        </div>
+                    </p>
+
+                    <p>
+                        <h2>Tableau Public (free access)</h2>
+                        <p><a href="https://public.tableau.com/app/profile/saleem3995/viz/Timeonsitereportswithtimeonsite_jsforPublic/Temp1Dash_1">Access this dashboard directly on Tableau public (web)</a>.</p>
+
+                        <!-- Tableau Dashboard & sheets block -->
+                        <div class='tableauPlaceholder' id='viz1664008719393' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ti&#47;Timeonsitereportswithtimeonsite_jsforPublic&#47;Temp1Dash_1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Timeonsitereportswithtimeonsite_jsforPublic&#47;Temp1Dash_1' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ti&#47;Timeonsitereportswithtimeonsite_jsforPublic&#47;Temp1Dash_1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1664008719393');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1000px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='850px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1000px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='850px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.minWidth='1000px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='850px';vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+                        <!-- Tableau Dashboard & sheets block -->
+
+                        <br/>
+                        <strong>Tips for using Tableau public:</strong>
+                        <ul>
+                            <li>Tableau Public is free and allowed <strong>upto 1 million records</strong> for accessing over web</li>
+                            <li>You have the <strong>"download worksheets"</strong> option at the bottom of these visualizations to download/export to your computer</li>
+                            <li>You can't export worksheets in Tableau Public (web) directly but you can download the worksheets/dashboards to local. Then, use Tableau Public or Desktop app to import the worksheets as is. Then, make "data source" or Viz edits, then publish it to your web account again for web access.</li>
+                            <li>Click edit connection to replace this demo <strong>"tos"</strong> table with your dev/prod "tos" table or use "Union table" Tableau feature effectively. Your export/import activity is complete. You are ready to view ready-made, amazing visualizations for understaning user engagement.</li>
+                            <li>If you have Tableau licence, then you can perform analtyics over  billions of records. As per our knowledge, these worksheets can be accessed directly over other Tableau produts as well</li>
+                            <li>Make use of Tableau developers or BI developers' support to get it set up quickly and hassle-free. TOS admins are not providing direct support but very helpful in forums and discussion pages!</li>
+                        </ul>
+                    </p>
                 </p>
 
                 <p>
