Added tagline and star the repo text in homepage for documentation

--- a/index.html
+++ b/index.html
@@ -312,6 +312,12 @@
                             </div>
                         </div>
 
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;
+                            <cite style="font-size:20px;color:#6b696d;">“Modern user engagement tracker for your web pages. <strong>timeonsite.js</strong> powers small blogs to largest enterprises on the Internet for measuing user stay time. Measure the performace of your new web product launches and startups on the web effectively. Stay time for single page-visits as well!”</cite>
+                            
+                            <p><a href="https://github.com/saleemkce/timeonsite">Hit a <span style="font-size: 200%;color:yellow;">&starf;</span> on Github</a> to show your support!</p>
+                        </p>
+
                         <div class="timer_container_set3">
                             <div id="timerByMillisecondsHandler" style="cursor:pointer;color: #069;
                             font-size: 20px;">Want detailed precision (in milliseconds)?</div>
@@ -400,13 +406,13 @@
 
                     <p>
                         <h2>Business Intelligence for User Engagment</h2>
-                        <div>You are not limited to custom Visual app or raw SQL, you can view reports using any of the following tools:
+                        <div>You are not limited to custom Visual app or writing raw SQL to visualize data, you can view reports using any of the following tools:
                         <ul>
                             <li>Power BI</li>
                             <li>QlikView</li>
                             <li>Tableau etc.</li>
                         </ul>
-                        or any BI tool. You name it. Here is a sample Tableau public visualization created with <strong>timeonsite.js</strong> You can download it, import the worksheets with Tableau Public/Desktop application and replace the usual <strong>`tos`</strong> table with your production table and view fantastic visualizations. This is the table strcutre and only table used in following Tableau visualizations...<br/>
+                        or any BI tool. You name it. Here is a sample Tableau public visualization created with <strong>timeonsite.js</strong> You can download it, import the worksheets with Tableau Public/Desktop application and replace the usual <strong>"tos"</strong> table with your production table and view fantastic visualizations. This is the table structure and only table used in following Tableau visualizations...<br/>
                         <img id="tosTableStructure" src='assets/img/tos_table_structure.png' style="width: 100%;cursor: pointer;" alt='tos table structure'/>
                         </div>
                     </p>
@@ -427,7 +433,7 @@
                             <li>You can't export worksheets in Tableau Public (web) directly but you can download the worksheets/dashboards to local. Then, use Tableau Public or Desktop app to import the worksheets as is. Then, make "data source" or Viz edits, then publish it to your web account again for web access.</li>
                             <li>Click edit connection to replace this demo <strong>"tos"</strong> table with your dev/prod "tos" table or use "Union table" Tableau feature effectively. Your export/import activity is complete. You are ready to view ready-made, amazing visualizations for understaning user engagement.</li>
                             <li>If you have Tableau licence, then you can perform analtyics over  billions of records. As per our knowledge, these worksheets can be accessed directly over other Tableau produts as well</li>
-                            <li>Make use of Tableau developers or BI developers' support to get it set up quickly and hassle-free. TOS admins are not providing direct support but very helpful in forums and discussion pages!</li>
+                            <li>Make use of Tableau developers or BI developers' support to get it set up quickly and hassle-free. TOS admins are not providing direct support but are very helpful in forums and discussion pages!</li>
                         </ul>
                     </p>
                 </p>
